--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,14 @@
 }
 h2.alegreya {
     font-weight: 600;
+    margin-bottom: 50px!important;
+}
+h2.alegreya.text-center {
+    display: inline;
 }
 body {
     font-family: 'Calibri', sans-serif;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 h1 {
@@ -55,30 +59,13 @@ header {
 .m0 {
     margin: 0;
 }
-
-@media (min-width: 1400px){
-    .container {
-        width: 1400px;
-    }
-}
-@media (min-width: 1200px){
-    .container {
-        width: 100%;
-    }
-}
-@media (min-width: 992px) {
-    .container {
-        width: 100%;
-    }
-}
-
-@media (min-width: 768px){
-    .container {
-        width: 100%;
-    }
+.container {
+    max-width: 1600px;
+    width: 100%;
 }
 
 .logo {
+    margin-top: 20px;
 }
 .logo a {
     display: inline-block;
@@ -93,7 +80,7 @@ header {
 }
 
 .top_header a {
-    color: #000;
+    color: #aba8a8;
     font-size: 12px;
     font-weight: 400;
     margin-left: 20px;
@@ -208,7 +195,7 @@ header {
 
 .sudc_menu .navbar-default .navbar-nav>li>a {
     color: #000;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
 }
 
@@ -367,8 +354,8 @@ bottom: -50px;
 
 .footer_top ul li a {
     color: #9c9b9b;
-    font-size: 13px;
-    font-weight: 400;
+    font-size: 14px;
+    font-weight: 200;
     line-height: 15px;
 }
 
@@ -880,7 +867,7 @@ ol.carousel-indicators {
     background-size: cover;
     position: relative;
 }
-section.geturcard_bg {
+section.geturcard_bg .container {
     background-color: #2298d0;
     padding: 30px 10px;
 }
@@ -917,7 +904,7 @@ a#submenuhead {
     color: #000;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 30px;
     display: inline-block;
     padding: 10px 30px;
     text-align: center;
@@ -945,7 +932,7 @@ a.bttn.white_black {
 
 .getCard a.bttn {
     padding: 10px 20px; 
-    margin-top: 15px;
+    margin-top: 8px;
     margin-left: 30px;
 }
 
@@ -961,8 +948,7 @@ a.bttn.white_black {
     padding: 0 22%;
 }
 section.quick-shop{
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 90px;
 }
 section.quick-shop1{
     margin-top: 70px;
@@ -989,12 +975,10 @@ padding-left: 0px;
     text-decoration: underline;
 }
 .trndy_items {
-    margin-top: 60px;
-    margin-bottom: 40px;
+    margin-top: 70px;
 }
 .dealsOfDay {
-    margin-top: 40px;
-    margin-bottom: 40px;  
+    margin-top: 70px;
 }
 .arrivals-grids {
     margin-top: 4em;
@@ -1129,18 +1113,26 @@ a.fill-div {
 .mt10 {
     margin-top: 25px;
 }
+.top_stores .grid-arr .grid-arrival figure > a .grid-img img {
+    width: 100%;
+}
+.top_stores .grid-arrival {
+    padding: 0;
+}
 .quick-shop_3{
-    margin-top: 10px;
-    margin-bottom: 40px;
+    margin-top: 70px;
 }
 
 .search-sec {
     position: absolute;
-    left:50%;
+    left:48%;
     transform: translate(-50%, -50%);
     border-radius: 0px;
     width: 100%;
     height: 100%;
+}
+.search-sec .btn{
+    border-radius: 0px;
 }
 .header-carousal {
     position: relative;
@@ -1289,7 +1281,7 @@ section.top_stores .grid-arr{
     margin-bottom: 25px;
 }
 section.top_stores {
-    margin-bottom: 40px;
+    margin-top: 70px;
 }
 section.top_stores .view_more {
     margin: 50px auto;
@@ -1302,22 +1294,22 @@ section.top_stores .view_more {
 }
 
 /* Product carousal*/
-.dealsOfDay .carousel, .categoryMonth  .carousel{
-    margin: 50px auto;
+.dealsOfDay .carousel, .recentlyViewed  .carousel{
+    margin: 10px auto;
     padding: 0 10px;
 }
-.dealsOfDay .carousel .item, .categoryMonth  .carousel .item{
+.dealsOfDay .carousel .item, .recentlyViewed  .carousel .item{
     min-height: 330px;
-   /* text-align: center;*/
+    /* text-align: center;*/
     overflow: hidden;
 }
-.dealsOfDay .carousel .carousel-control, .categoryMonth  .carousel .carousel-control{
+.dealsOfDay .carousel .carousel-control, .recentlyViewed  .carousel .carousel-control{
     height: 100px;
     width: 40px;
     background: none;
     margin: auto 0;
 }
-.dealsOfDay .carousel .carousel-control i, .categoryMonth  .carousel .carousel-control i{
+.dealsOfDay .carousel .carousel-control i, .recentlyViewed  .carousel .carousel-control i{
     font-size: 30px;
     position: absolute;
     top: 50%;
@@ -1330,16 +1322,16 @@ section.top_stores .view_more {
     text-shadow: none;
     font-weight: bold;
 }
-.dealsOfDay .carousel .carousel-control.left i, .categoryMonth .carousel .carousel-control.left i{
+.dealsOfDay .carousel .carousel-control.left i, .recentlyViewed .carousel .carousel-control.left i{
     margin-left: -3px;
 }
-.dealsOfDay .carousel .carousel-control.left i, .categoryMonth .carousel .carousel-control.left i{
+.dealsOfDay .carousel .carousel-control.left i, .recentlyViewed .carousel .carousel-control.left i{
     margin-right: -3px;
 }
-.dealsOfDay .carousel .carousel-indicators, .categoryMonth .carousel .carousel-indicators{
+.dealsOfDay .carousel .carousel-indicators, .recentlyViewed .carousel .carousel-indicators{
     bottom: -50px;
 }
-.dealsOfDay .carousel-indicators li, .dealsOfDay .carousel-indicators li.active, .categoryMonth  .carousel-indicators li, .categoryMonth .carousel-indicators li.active{
+.dealsOfDay .carousel-indicators li, .dealsOfDay .carousel-indicators li.active, .recentlyViewed  .carousel-indicators li, .recentlyViewed .carousel-indicators li.active{
     width: 10px;
     height: 10px;
     margin: 4px;
@@ -1353,22 +1345,22 @@ section.top_stores .view_more {
     background: rgba(0, 0, 0, 0.6);
 }
 
-.top_category .carousel, .categoryMonth  .carousel{
-    margin: 50px auto;
+.top_category .carousel, .recentlyViewed  .carousel{
+    margin: 20px auto;
     padding: 0 10px;
 }
-.top_category .carousel .item, .categoryMonth  .carousel .item{
+.top_category .carousel .item, .recentlyViewed  .carousel .item{
     min-height: 330px;
-  /*  text-align: center;*/
+    /*  text-align: center;*/
     overflow: hidden;
 }
-.top_category .carousel .carousel-control, .categoryMonth  .carousel .carousel-control{
+.top_category .carousel .carousel-control, .recentlyViewed  .carousel .carousel-control{
     height: 100px;
     width: 40px;
     background: none;
     margin: auto 0;
 }
-.top_category .carousel .carousel-control i, .categoryMonth  .carousel .carousel-control i{
+.top_category .carousel .carousel-control i, .recentlyViewed  .carousel .carousel-control i{
     font-size: 30px;
     position: absolute;
     top: 50%;
@@ -1381,16 +1373,16 @@ section.top_stores .view_more {
     text-shadow: none;
     font-weight: bold;
 }
-.top_category .carousel .carousel-control.left i, .categoryMonth .carousel .carousel-control.left i{
+.top_category .carousel .carousel-control.left i, .recentlyViewed .carousel .carousel-control.left i{
     margin-left: -3px;
 }
-.top_category .carousel .carousel-control.left i, .categoryMonth .carousel .carousel-control.left i{
+.top_category .carousel .carousel-control.left i, .recentlyViewed .carousel .carousel-control.left i{
     margin-right: -3px;
 }
-.top_category .carousel .carousel-indicators, .categoryMonth .carousel .carousel-indicators{
+.top_category .carousel .carousel-indicators, .recentlyViewed .carousel .carousel-indicators{
     bottom: -50px;
 }
-.top_category .carousel-indicators li, .dealsOfDay .carousel-indicators li.active, .categoryMonth  .carousel-indicators li, .categoryMonth .carousel-indicators li.active{
+.top_category .carousel-indicators li, .dealsOfDay .carousel-indicators li.active, .recentlyViewed  .carousel-indicators li, .recentlyViewed .carousel-indicators li.active{
     width: 10px;
     height: 10px;
     margin: 4px;
@@ -1407,7 +1399,7 @@ section.top_stores .view_more {
 /*Budget store*/
 .budget_stores{
     background-color: #e7e7e7;
-    margin: 20px 0;
+    margin-top: 90px;
 }
 .budget_stores h2{
     margin: 60px 0 40px 0;
@@ -1440,7 +1432,7 @@ section.top_stores .view_more {
 .customer_pod {
     border: solid 1px #CCCCCC;
     padding: 20px;
-    height: 350px;
+    height: 390px;
 }
 .customer_pod img {
     margin: 10px auto;
@@ -1453,7 +1445,7 @@ section.top_stores .view_more {
 .app_store_pod {
     background-color: #4cb993;
     border: solid 1px #4cb993;
-    height: 350px;
+    height: 390px;
     padding: 25px;
     background-image: url('../images/Mobile%20app%20image.png');
     background-repeat: no-repeat;
@@ -1476,7 +1468,7 @@ section.top_stores .view_more {
 }
 .app_logo_pod img{
     margin: 25px auto 40px 0px;
-    width: 75%;
+    /* width: 75%;*/
 }
 .mobile_logo_pod{
     position: relative;
@@ -1495,7 +1487,7 @@ ul.list-group.horizontal.category_list_hero {
     padding-left: 50px;
 }
 section.quick-shop img {
-    height: 310px;
+
 }
 .got_question  h3{
     margin-top: 0;  
@@ -1505,19 +1497,55 @@ section.quick-shop img {
     margin-bottom: 0;
 }
 
+.customer_pod ol.carousel-indicators {
+    position: absolute;
+    margin-bottom: 0;
+    bottom: -50px;
+}
+.customer_pod ol.carousel-indicators li{
+    background-color: #CCCCCC;
+}
+.customer_pod ol.carousel-indicators li.active{
+    background-color: #262424;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+.mobile_link {
+    float: left;
+    padding: 0;
+    margin: 0;
+}
+.section.recentlyViewed {
+    margin: 75px auto 50px auto;
+}
+span.act_price {
+    font-size: 15px;
+    margin-right: 5px;
+    color: #000;
+    font-weight: 600;
+}
+section.recentlyViewed {
+    margin: 70px 0 70px 0;
+}
+section.top_category {
+    margin-top: 70px;
+}
+section.customer_speaks{
+    margin-top: 70px;
+}
+h2.text-center.alegreya::before {
+    display: inline;
+    background-image: url(../images/line.jpg);
+}
+.header_title{
+    margin: 20px auto 10px auto;
+    display: table;    
+}  
+.header_title h2{
+    padding: 0 20px 0 20px;
+}
+.header_title img {
+    vertical-align: super;
+}
 
 
 
@@ -1565,7 +1593,7 @@ section.quick-shop img {
         margin: 10px 36px 0px 0;
     }
     .grid-img {
-        height: 150px!important;
+        height: auto!important;
     }
     .grid-arr .grid-arrival figure > a .grid-img img {
         position: unset;
@@ -1705,6 +1733,21 @@ section.quick-shop img {
 }/*991*/
 
 @media screen and (max-width: 767px) {
+    .logo {
+        margin-top: -21px;
+    }
+    .logo img {
+        margin-bottom: 0;
+    }
+    .navbar-toggle {
+        top: -13px;
+    }
+    .hide_mobile {
+        display: none;
+    }
+    .show_mobile {
+        display: block;
+    }
     header {
         padding-bottom: 0;
     }
@@ -1793,10 +1836,12 @@ section.quick-shop img {
     }
     .heroCarousal {
         position: relative;
-        height: 400px;
+        height: 310px;
+        background-color: #5f5959;
     }
     .heroCarousal .carousel-inner>.item>img {
         height: 400px;
+        display: none;
     }
     .sudc_menu .navbar-nav {
         float: left;
@@ -1818,20 +1863,20 @@ section.quick-shop img {
         height: 100%;
     }
     .grid-img {
-        height: 150px!important;
+        height: auto;
     }
     .grid-arr .grid-arrival figure > a .grid-img img {
         position: unset;
     }
     .app_store_pod {
-        height: 520px;
+        height: 560px;
     }
     .looking label {
         width: 100%!important;
         display: none;
     }
     .looking input {
-      padding: 6px 12px;
+        padding: 6px 12px;
     }
     .where_in label {
         width: 100%; 
@@ -1856,13 +1901,258 @@ section.quick-shop img {
     .main_categries{
         display: none;
     }
+    .hide_mobile {
+        display: none;
+    }
+    .show_mobile {
+        display: block;
+    }
+    ul.list-group.horizontal.category_list_hero {
+        margin-top: 10px;
+        float: left;
+    }
+    header.sticky_header {
+        padding-top: 20px;
+    }
+    .getCard a.bttn {
+        font-size: 14px;
+        margin-left: 17px;
+    }
+    .header_title img{
+        display: none;
+    }
+    .description {
+        text-align: center;
+    }
+    .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
+        width: 92%;
+    }
+    .app_logo_pod img {
+        margin: 25px auto 9px 0px;
+    }
+    .app_logo_pod {
+        padding: 15px;
+    }
+    .customer_pod {
+        height: 400px;
+    }
+
+    /*New*/
+    .col-md-12.col-sm-12.getCard {
+        padding: 0 25%;
+    }
+    section img.img-responsive{
+        margin: 10px auto;
+    }
+    .app_logo_pod img {
+        width: 56%;
+        margin-top: 20px;
+    }
+}
 
 }/*max-width: 767px*/
 @media screen and (max-width:480px) {
+    .logo {
+        margin-top: -21px;
+    }
     .logo img {
         margin-bottom: 0;
     }
     .navbar-toggle {
         top: -13px;
     }
-}
+    .hide_mobile {
+        display: none;
+    }
+    .show_mobile {
+        display: block;
+    }
+    header {
+        padding-bottom: 0;
+    }
+    .top_header {
+        margin: 10px 30px 5px 0;
+    }
+    a.search-icon {
+        position: relative;
+        top: -3px;
+    }
+    .search-filter-in {
+        width: 280px;
+        top: 25px;
+    }
+    .navbar-toggle {
+        top: -5px;
+    }
+
+    .dropbtn {
+        color: #000;
+        font-size: 14px;
+    }
+    .dropbtn img {
+        position: relative;
+        left: 3px;
+        top: -1px;
+    }
+    .top_header a {
+        font-size: 12px;
+    }
+    .text_slideshow {
+        padding-top: 0;
+    }
+    .text_slideshow .carousel-indicators {
+        bottom: -25px;
+    }
+    .text_slideshow .carousel {
+        width: 100%;
+    }
+    .text_slideshow .item h2 {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+    .logo img {
+        margin-bottom: 10px;
+    }
+    .banner img {
+        opacity: 0.1;
+    }
+    .footer_top {
+        padding: 25px 0;
+    }
+    .footer_top img {
+        margin-bottom: 15px;
+    }
+    .footer_height {
+        height: auto;
+        margin-bottom: 25px;
+    }
+    .footer_top h4 {
+        margin-bottom: 15px;
+        font-size: 18px;
+    }
+    .footer_top ul li {
+        margin-bottom: 0;
+    }
+    .footer_top ul li a {
+        font-size: 14px;
+    }
+    .footer_height:last-child {
+        margin-bottom: 0;
+    }
+    .footer_bottom p {
+        font-size: 14px;
+    }
+    .footer_top button {
+        font-size: 16px;
+        padding: 6px 16px;
+    }
+    .footer_top p {
+        padding-right: 0;
+    }
+    .search-sec { 
+        top: 56%;
+        padding: 25px;
+    }
+    .heroCarousal {
+        position: relative;
+        height: 310px;
+        background-color: #5f5959;
+    }
+    .heroCarousal .carousel-inner>.item>img {
+        height: 400px;
+        display: none;
+    }
+    .sudc_menu .navbar-nav {
+        float: left;
+    }
+    .navbar-nav {
+        margin: 20.5px -15px;
+    }
+    .grid-arr .grid-arrival figure > a .grid-img img {
+        width: 50%;
+    }
+    .looking input {
+        width: 100%!important;
+    }
+    .where_in .input-group {
+        width: 100%;
+        padding: 0px;
+    }
+    .grid-arr .grid-arrival figure > a .grid-img {
+        height: 100%;
+    }
+    .grid-img {
+        height: auto;
+    }
+    .grid-arr .grid-arrival figure > a .grid-img img {
+        position: unset;
+    }
+    .app_store_pod {
+        height: 560px;
+    }
+    .looking label {
+        width: 100%!important;
+        display: none;
+    }
+    .looking input {
+        padding: 6px 12px;
+    }
+    .where_in label {
+        width: 100%; 
+        display: none;
+    }   
+    .sudc_menu .navbar {
+        margin-top: 20px;
+    }
+    .mob_padding [class*="col-"] {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .app_store_pod {
+        background-image: none;
+    }
+    .app_logo_pod img {
+        width: 100%;
+    }
+    section.quick-shop img {
+        height: auto;
+    }
+    .main_categries{
+        display: none;
+    }
+    .hide_mobile {
+        display: none;
+    }
+    .show_mobile {
+        display: block;
+    }
+    ul.list-group.horizontal.category_list_hero {
+        margin-top: 10px;
+        float: left;
+    }
+    header.sticky_header {
+        padding-top: 20px;
+    }
+    .getCard a.bttn {
+        font-size: 14px;
+        margin-left: 17px;
+    }
+    .header_title img{
+        display: none;
+    }
+    .description {
+        text-align: center;
+    }
+    .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
+        width: 92%;
+    }
+    .app_logo_pod img {
+        margin: 25px auto 9px 0px;
+    }
+    .app_logo_pod {
+        padding: 15px;
+    }
+    .customer_pod {
+        height: 400px;
+    }
+}/*     480px     */
