--- a/css/style.css
+++ b/css/style.css
@@ -1566,52 +1566,30 @@ h2.text-center.alegreya::before {
 
 
 /* Device */
-@media screen and (max-width: 1700px) {
-
-}
-
-@media screen and (max-width: 1550px) {
-
-}
-
-@media screen and (max-width: 1450px) {
-
-}
-
-@media screen and (max-width: 1366px) {
-
-}
-
-@media screen and (max-width: 1200px) {
-
-}
-
-@media screen and (max-width: 991px) {
-    
-    .logo {
-        margin-top: 15px;
-        margin-left: 5px;
-    }
+@media screen and (max-width:480px) {
     .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
-        width: 65%;
+        width: 60%;
     }
-    .nav>li>a {
-        padding: 10px 10px;
+    .logo {
+        margin-top: -21px;
     }
-    .grid-arrival {
-        height: 200px;
+    .logo img {
+        margin-bottom: 0;
+    }
+    .navbar-toggle {
+        top: -13px;
+    }
+    .hide_mobile {
+        display: none;
+    }
+    .show_mobile {
+        display: block;
     }
     header {
         padding-bottom: 0;
     }
     .top_header {
-        margin: 10px 36px 0px 0;
-    }
-    .grid-img {
-        height: auto!important;
-    }
-    .grid-arr .grid-arrival figure > a .grid-img img {
-        position: unset;
+        margin: 10px 30px 5px 0;
     }
     a.search-icon {
         position: relative;
@@ -1689,17 +1667,18 @@ h2.text-center.alegreya::before {
     .footer_top p {
         padding-right: 0;
     }
-    .search-sec {
-        top: 72%;
-        left: 50%;
+    .search-sec { 
+        top: 56%;
         padding: 25px;
     }
     .heroCarousal {
         position: relative;
-        height: 309px;
+        height: 310px;
+        background-color: #5f5959;
     }
     .heroCarousal .carousel-inner>.item>img {
-        height: 310px;
+        height: 400px;
+        display: none;
     }
     .sudc_menu .navbar-nav {
         float: left;
@@ -1711,66 +1690,91 @@ h2.text-center.alegreya::before {
         width: 50%;
     }
     .looking input {
-        /*width: 100%!important;*/
+        width: 100%!important;
     }
     .where_in .input-group {
-        width: 75%;
+        width: 100%;
         padding: 0px;
-    }
-    .search-sec .input-group-addon {
-        padding: 6px 3px; 
     }
     .grid-arr .grid-arrival figure > a .grid-img {
         height: 100%;
     }
-    .logo img {
-        margin-bottom: 10px;
+    .grid-img {
+        height: auto;
+    }
+    .grid-arr .grid-arrival figure > a .grid-img img {
+        position: unset;
+    }
+    .app_store_pod {
+        height: 560px;
+    }
+    .looking label {
+        width: 100%!important;
+        display: none;
+    }
+    .looking input {
+        padding: 6px 12px;
+    }
+    .where_in label {
+        width: 100%; 
+        display: none;
+    }   
+    .sudc_menu .navbar {
         margin-top: 20px;
     }
-    .sticky_header .logo img {
-        margin-top: 0px;
-    }
-    .logo img {
-        max-width: 100%;
-    }
-    .sudc_menu {
-        margin-top: 0px;
-    }
-    .mob_padding [class*="col-"]{
+    .mob_padding [class*="col-"] {
         padding-top: 15px;
         padding-bottom: 15px;
     }
     .app_store_pod {
         background-image: none;
     }
+    .app_logo_pod img {
+        width: 100%;
+    }
     section.quick-shop img {
         height: auto;
     }
-    .customer_pod {
-        height: 450px;
-    }
-    .main_categries {
+    .main_categries{
         display: none;
     }
-    .horizontal.category_list_hero {
+    .hide_mobile {
+        display: none;
+    }
+    .show_mobile {
+        display: block;
+    }
+    ul.list-group.horizontal.category_list_hero {
         margin-top: 10px;
         float: left;
     }
-    .where_in label {
-        width: 24%;
+    header.sticky_header {
+        padding-top: 20px;
+    }
+    .getCard a.bttn {
+        font-size: 14px;
+        margin-left: 17px;
+    }
+    .header_title img{
+        display: none;
     }
     .description {
         text-align: center;
     }
-    a#submenuhead {
-        padding: 5px 5px;
+    .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
+        width: 92%;
     }
-    a#submenuhead .fa-user{
-        display: none;
+    .app_logo_pod img {
+        margin: 25px auto 9px 0px;
     }
-}/*991*/
-
-@media screen and (max-width: 767px) {
+    .app_logo_pod {
+        padding: 15px;
+    }
+    .customer_pod {
+        height: 400px;
+    }
+}/*480px*/
+@media screen and (min-width : 481px) and (max-width: 767px) {
     .logo {
         margin-top: -21px;
     }
@@ -1986,33 +1990,33 @@ h2.text-center.alegreya::before {
         width: 56%;
         margin-top: 20px;
     }
-}
-
-}/*max-width: 767px*/
-@media screen and (max-width:480px) {
-    .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
-        width: 60%;
-    }
+}/*767*/
+@media screen and (min-width : 768px) and (max-width: 991px) {
+    
     .logo {
-        margin-top: -21px;
+        margin-top: 15px;
+        margin-left: 5px;
     }
-    .logo img {
-        margin-bottom: 0;
+    .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
+        width: 65%;
     }
-    .navbar-toggle {
-        top: -13px;
+    .nav>li>a {
+        padding: 10px 10px;
     }
-    .hide_mobile {
-        display: none;
-    }
-    .show_mobile {
-        display: block;
+    .grid-arrival {
+        height: 200px;
     }
     header {
         padding-bottom: 0;
     }
     .top_header {
-        margin: 10px 30px 5px 0;
+        margin: 10px 36px 0px 0;
+    }
+    .grid-img {
+        height: auto!important;
+    }
+    .grid-arr .grid-arrival figure > a .grid-img img {
+        position: unset;
     }
     a.search-icon {
         position: relative;
@@ -2090,18 +2094,17 @@ h2.text-center.alegreya::before {
     .footer_top p {
         padding-right: 0;
     }
-    .search-sec { 
-        top: 56%;
+    .search-sec {
+        top: 72%;
+        left: 50%;
         padding: 25px;
     }
     .heroCarousal {
         position: relative;
-        height: 310px;
-        background-color: #5f5959;
+        height: 309px;
     }
     .heroCarousal .carousel-inner>.item>img {
-        height: 400px;
-        display: none;
+        height: 310px;
     }
     .sudc_menu .navbar-nav {
         float: left;
@@ -2113,87 +2116,88 @@ h2.text-center.alegreya::before {
         width: 50%;
     }
     .looking input {
-        width: 100%!important;
+        /*width: 100%!important;*/
     }
     .where_in .input-group {
-        width: 100%;
+        width: 75%;
         padding: 0px;
+    }
+    .search-sec .input-group-addon {
+        padding: 6px 3px; 
     }
     .grid-arr .grid-arrival figure > a .grid-img {
         height: 100%;
     }
-    .grid-img {
-        height: auto;
-    }
-    .grid-arr .grid-arrival figure > a .grid-img img {
-        position: unset;
-    }
-    .app_store_pod {
-        height: 560px;
-    }
-    .looking label {
-        width: 100%!important;
-        display: none;
-    }
-    .looking input {
-        padding: 6px 12px;
-    }
-    .where_in label {
-        width: 100%; 
-        display: none;
-    }   
-    .sudc_menu .navbar {
+    .logo img {
+        margin-bottom: 10px;
         margin-top: 20px;
     }
-    .mob_padding [class*="col-"] {
+    .sticky_header .logo img {
+        margin-top: 0px;
+    }
+    .logo img {
+        max-width: 100%;
+    }
+    .sudc_menu {
+        margin-top: 0px;
+    }
+    .mob_padding [class*="col-"]{
         padding-top: 15px;
         padding-bottom: 15px;
     }
     .app_store_pod {
         background-image: none;
     }
-    .app_logo_pod img {
-        width: 100%;
-    }
     section.quick-shop img {
         height: auto;
     }
-    .main_categries{
+    .customer_pod {
+        height: 450px;
+    }
+    .main_categries {
         display: none;
     }
-    .hide_mobile {
-        display: none;
-    }
-    .show_mobile {
-        display: block;
-    }
-    ul.list-group.horizontal.category_list_hero {
+    .horizontal.category_list_hero {
         margin-top: 10px;
         float: left;
     }
-    header.sticky_header {
-        padding-top: 20px;
-    }
-    .getCard a.bttn {
-        font-size: 14px;
-        margin-left: 17px;
-    }
-    .header_title img{
-        display: none;
+    .where_in label {
+        width: 24%;
     }
     .description {
         text-align: center;
     }
-    .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
-        width: 92%;
+    a#submenuhead {
+        padding: 5px 5px;
     }
-    .app_logo_pod img {
-        margin: 25px auto 9px 0px;
+    a#submenuhead .fa-user{
+        display: none;
     }
-    .app_logo_pod {
-        padding: 15px;
-    }
-    .customer_pod {
-        height: 400px;
-    }
-}/*     480px     */
+}/*991*/
+
+@media screen and (max-width: 1700px) {
+
+}
+
+@media screen and (max-width: 1550px) {
+
+}
+
+@media screen and (max-width: 1450px) {
+
+}
+
+@media screen and (max-width: 1366px) {
+
+}
+
+@media screen and (max-width: 1200px) {
+
+}
+
+
+
+
+
+}/*max-width: 767px*/
+
