--- a/css/style.css
+++ b/css/style.css
@@ -1556,6 +1556,11 @@ h2.text-center.alegreya::before {
 }
 .about_the_card h1{
     color: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 400;
 }
 .about_the_card_img {
     background-image: url(../images/About%20us.jpg);
@@ -1566,11 +1571,63 @@ h2.text-center.alegreya::before {
 }
 
 
+/*Menu minified*/
 
+.menu_other_pages .search-sec {
+    position: static;
+    left: auto;
+    transform: none;
+    border-radius: 0px;
+    width: 100%;
+    height: 100%;
+}
+.menu_other_pages .looking label {
+    width: 26%!important;
+}
+.menu_other_pages .form-section .looking,.form-section .where_in,.form-section .sub_but{
+    border:0;
+}
+.menu_other_pages .where_in label,.looking label{
+    padding:10px 10px 0 10px;
+    line-height: 32px;
+}
+.menu_other_pages .btn{
+    padding:14px 12px 11px;
+}
+.menu_other_pages .section.brd_crmb {
+    padding: 20px 20px 0;
+}
 
+section.menu_other_pages .container {
+    background-color: #2298d0;
+    padding: 10px 10px;
+}
 
-
-
+p.about_card_head {
+    color: #002038;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 600;
+}
+.about_the_card_wrapper {
+    padding: 70px 0 0px 0;
+}
+p.about_card_description {
+    font-size: 16px;
+    padding-top: 40px;
+}
+.product_count_wrapper {
+    margin-top: 30px;
+}
+.product_wrapper img {
+    margin: 0 auto;
+}
+.product_wrapper {
+    text-align: center;
+}
+.product_wrapper h4 {
+    font-weight: 600;
+}
 
 
 
